--- a/Aplikacja_webowa_dziennik_elektroniczny/Views/Class2A/BiologyAvarages.cshtml
+++ b/Aplikacja_webowa_dziennik_elektroniczny/Views/Class2A/BiologyAvarages.cshtml
@@ -60,6 +60,9 @@
             {
                 <tr>
                     <td>
+                        @Html.DisplayFor(modelItem => item.Id)
+                    </td>
+                    <td>
                         @Html.DisplayFor(modelItem => item.TestAvarage)
                     </td>
                     <td>
