--- a/Aplikacja_webowa_dziennik_elektroniczny/Views/Class3B/BiologyAvarages.cshtml
+++ b/Aplikacja_webowa_dziennik_elektroniczny/Views/Class3B/BiologyAvarages.cshtml
@@ -10,9 +10,12 @@
     <div>
         <a class="nav-link text-dark" asp-area="" asp-controller="Class3B" asp-action="StudentsAvarages">Back to previous page</a>
     </div>
+    @if (User.IsInRole("BiologyTeacher") || User.IsInRole("HeadTeacher"))
+    {
     <div class="next">
         <a class="nav-link text-dark" asp-area="" asp-controller="Class3B" asp-action="EditBiologyGrade">Edit grade</a>
-    </div>
+    </div>    
+    }
 </div>
 <style>
     table {
